...
    "A week" : {

    },
    "About Pantry" : {

    },
    "Add" : {

    },
    "Add %@. %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
    "Add a few things to your pantry and ideas will appear here." : {

    },
    "Add a Key" : {

    },
    "Add a List" : {

    },
    "Add Food" : {

    },
    "Add from a Photo" : {
...
    "Dinner ideas arrive an hour after the use-soon reminder." : {

    },
    "Dislikes" : {

    },
    "Done" : {

    },
    "Drinks" : {

    },
    "Easy" : {
...
    "History" : {

    },
    "Hob" : {

    },
    "Home" : {

    },
    "How far ahead something counts as needing to be used." : {

    },
    "https://example.com/pantry-ai" : {
...
    "Ingredients" : {

    },
    "Ingredients to Use Up" : {

    },
    "Intelligence" : {

    },
    "Involved" : {

    },
    "Italian" : {
...
    "Missing %lld ingredients" : {

    },
    "Missing 1 ingredient" : {

    },
    "More" : {

    },
    "More Details" : {

    },
    "Name" : {

    },
    "Name and quantity are all you need. Everything else is optional." : {

    },
    "Nearly There" : {
...
    "packs" : {

    },
    "Packs" : {

    },
    "Pantry" : {

    },
    "Pantry can take the ingredients you used out of your inventory." : {

    },
    "Pantry comes with a starter library. If it's missing, reinstall it from More → Recipe Library." : {
...
    "Recently Added" : {

    },
    "Recently Cooked" : {

    },
    "Recipes" : {

    },
    "Recipes from these are nudged up the list." : {

    },
    "Recipes that need equipment you don't have are left out." : {
...
    "Saturates" : {

    },
    "Sauces & Condiments" : {

    },
    "Save" : {

    },
    "Save to Keychain" : {

    },
    "Saved" : {

    },
    "Scan Barcode" : {
      "comment" : "The title of the barcode scanner.",
      "isCommentAutoGenerated" : true
    },
...
    "Set Up a Proxy" : {

    },
    "Share" : {

    },
    "Shopping" : {

    },
    "Shopping items" : {

    },
    "Shopping list" : {
...
    "Wait a moment and try again." : {

    },
    "Weight" : {

    },
    "What Can I Make?" : {

    },
    "What did you get?" : {

    },
    "What Needs Using" : {
...
